[project]
name = "steely"
version = "1.0.0.8"
description = "A Python debugging and analysis toolkit with beautiful, colorful terminal output. Provides decorators for automatic logging, execution timing, and real-time variable tracking."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Tom Neto"}
]
keywords = [
    "debugging",
    "logging",
    "profiling",
    "tracing",
    "decorator",
    "variable-tracking",
    "execution-time",
    "terminal",
    "colored-output",
    "developer-tools",
    "debug",
    "trace",
    "inspect",
    "monitor"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Logging",
    "Typing :: Typed",
    "Environment :: Console"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/tomneto/steely"
Documentation = "https://github.com/tomneto/steely#readme"
Repository = "https://github.com/tomneto/steely"
Issues = "https://github.com/tomneto/steely/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["steely"]
